# nampower

./: .gitignore  CMakeLists.txt
.github/workflows/: msvc_cmake.yml
nampower/: CMakeLists.txt
